TheKabal (14 September 2013)
--------------------------------------
Switch faq.php to use template, move hardcoded title out to language file
Move hardcoded text out of index into language files
Make index load language flags & links based on drop-in supported language directory
Localize flag for languages into language file & table
Switch new.php to use template, fix minor bug in new2 preventing new user signups

TheKabal (11 August 2013)
--------------------------------------
Split the database initialization out into a class (BntDb)
Update composer

TheKabal (10 August 2013)
--------------------------------------
Migrate the $link_forums variable to use the $bntreg.

TheMightyDude (28 August 2013)
--------------------------------------
Fixed "Five Finger Discount" Traderoute bug that allows free trade.

TheKabal (10 August 2013)
--------------------------------------
Make the call for ckeditor conditional, so it is only loaded for mailto for now

TheKabal (28 July 2013)
--------------------------------------
includes/calc_score has been moved to classes/BntScore::updateScore
includes/check_login has been moved to classes/BntLogin::checkLogin

TheKabal (27 July 2013)
--------------------------------------
TheMightyDude discovered that the language files were not stored in utf-8, and as a result were not giving correct utf-8 results in CU and elsewhere. Fixed!

TheKabal (8 July 2013)
--------------------------------------
Replace create universe with Big Bang. (No more big bang, all CU once again).
Fix scheduler repeat / run once to reflect the behavior of its new name
Fix default ships placed in sector 0 (should be 1, Sol was moved there)
Set password reset to 90 minutes, not 30.

TheKabal (7 July 2013)
--------------------------------------
Add password reset function that sends an email with a reset code, based on a hash of the existing password
Fix missing lang string for l_news_broke in big bang and report

TheKabal (30 June 2013)